# nxm-switch

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  activity_log.py  config.py  constants.py  discovery.py  launch.py  main.py  mime.py  nxm-switch.desktop  pyproject.toml  ruff.toml  rules.py  settings_page.py  settings_window.py
.github/workflows/: release.yml
nxm_switch/: activity_log.py  config.py  discovery.py  install.py  intercept_dialog.py  launch.py  logs_page.py  main.py  mime.py  rules.py  settings_page.py  settings_window.py  theme.py  widgets.py
