[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nxm-switch"
version = "0.5.3"
description = "A rules-based nexus mod manager (nxm) launcher for Linux."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
